# schedule-1-find-mix

./: Cargo.toml  README.md
.github/workflows/: build.yml
benches/: my_benchmark.rs
src/: effects.rs  ingredients.rs  lib.rs  main.rs  product.rs
tests/: test_main.rs
