[package]
name = "find_mix"
version = "0.1.0"
edition = "2024"
description = "Schedule 1 best mix brute force finder"
license = "GPL-3"
repository = "https://github.com/Commandcracker/schedule-1-find-mix"
readme = "README.md"
authors = ["Commandcracker"]

[profile.release]
codegen-units = 1
opt-level = 3
lto = true

[dependencies]
strum = "0.27.1"
strum_macros = "0.27.1"
mimalloc = "0.1.46"
rayon = "1.10.0"
clap = "4.5.38"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
